# IR2Vec

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CollectIR_8h_source.html  Corrupt_8h_source.html  Doxyfile  FlowAware_8h_source.html  IR2Vec_8h_source.html  LICENSE  LICENSE.eigen.MPL2  README.md  Random_8h_source.html  Reader_8h_source.html  Setting_8h_source.html  Symbolic_8h_source.html  Test_8h_source.html  Triple_8h_source.html  VectorSolverEigen_8h_source.html  VectorSolver_8h_source.html  annotated.html  classAdjListNode-members.html  classAdjListNode.html  classCollectIR-members.html  classCollectIR.html  classIR2VecHandler-members.html  classIR2VecHandler.html  classIR2Vec_1_1Embeddings-members.html  classIR2Vec_1_1Embeddings.html  classIR2Vec__FA-members.html  classIR2Vec__FA.html  classIR2Vec__Symbolic-members.html  classIR2Vec__Symbolic.html  classOpenKE_1_1analogy_1_1AnalogyScorer-members.html  classOpenKE_1_1analogy_1_1AnalogyScorer.html  classOpenKE_1_1config_1_1Tester_1_1Tester-members.html  classOpenKE_1_1config_1_1Tester_1_1Tester.html  classOpenKE_1_1config_1_1Tester_1_1Tester__coll__graph.map  classOpenKE_1_1config_1_1Tester_1_1Tester__inherit__graph.md5  (+377 more)
pass_template/: CMakeLists.txt  README.md
src/: CMakeLists.txt  CollectIR.cpp  FlowAware.cpp  IR2Vec.cpp  Symbolic.cpp  generate_vocabulary.py  generate_vocabulary.sh  libIR2Vec.cpp  utils.cpp
src/include/: CollectIR.h  FlowAware.h  IR2Vec.h  Symbolic.h  VectorSolver.h  VectorSolverEigen.h  profiler.h  utils.h  version.h.cmake
src/test-suite/: CMakeLists.txt  README.md  TimeBenchmarks.py  generateFlevel.sh  generateOracle.sh  generate_llfiles.sh  get_index_file.py  gmon.out  index-llvm10.files  index-llvm12.files  index-llvm14.files  index-llvm16.files  index-llvm17-source.files  index-llvm17.files  index-llvm18.files  index-llvm19.files  index-llvm20.files  index-llvm8.files  lit.cfg.py  lit.site.cfg.py.in  my-lit.py  sanity_check.sh.cmake  test-cpp-fa.lit  test-cpp-sym.lit  test-fa.lit  test-ir2vec.lit  test-sym.lit  test.lit  test_flowaware.lit  test_symbolic.lit
src/test-suite/PE-benchmarks-llfiles-llvm10/: Find_the_closest_pair_from_two_sorted_arrays.cpp.ll  Iterative_QuickSort.cpp.ll  Nearly_sorted_Algo.cpp.ll  aho-corasick-algorithm.cpp.ll  anagram-substring-search-search-permutations.cpp.ll  bellman-ford-algorithm.cpp.ll  bfs.cpp.ll  biconnectivity.cpp.ll  binary-insertion-sort.cpp.ll  binomial-coefficient.cpp.ll  birthday-paradox.cpp.ll  boolean-parenthesization-problem.cpp.ll  boruvkas-algorithm.cpp.ll  box-stacking.cpp.ll  boyer-moore-algorithm.cpp.ll  channel-assignment.cpp.ll  coin-change.cpp.ll  collect-maximum-points-in-a-grid-using-two-traversals.cpp.ll  construction-of-lcp-array-from-suffix-array.cpp.ll  count-1s-sorted-binary-array.cpp.ll  count-number-binary-strings-without-consecutive-1s.cpp.ll  count-of-n-digit-numbers-whose-sum-of-digits-equals-to-given-sum.cpp.ll  count-possible-ways-to-construct-buildings.cpp.ll  count-ways-reach-nth-stair.cpp.ll  cut-vertices.cpp.ll  cutting-a-rod.cpp.ll  detect-cycle-in-a-graph.cpp.ll  detect-cycle-undirected-graph.cpp.ll  dfa-based-division.cpp.ll  dfs.cpp.ll  edit-distance.cpp.ll  efficient-constructtion-of-finite-automata.cpp.ll  egg-dropping-puzzle.cpp.ll  euler-circuit-directed-graph.cpp.ll  eulerian-path-and-circuit.cpp.ll  find-common-elements-three-sorted-arrays.cpp.ll  find-k-closest-elements-given-value.cpp.ll  find-length-of-the-longest-consecutive-path-in-a-character-matrix.cpp.ll  find-minimum-number-of-coins-that-make-a-change.cpp.ll  find-parity.cpp.ll  (+78 more)
src/test-suite/PE-benchmarks-llfiles-llvm12/: Find_the_closest_pair_from_two_sorted_arrays.ll  Nearly_sorted_Algo.ll  aho-corasick-algorithm.ll  binomial-coefficient.ll  boolean-parenthesization-problem.ll  boruvkas-algorithm.ll  box-stacking.ll  boyer-moore-algorithm.ll  coin-change.ll  collect-maximum-points-in-a-grid-using-two-traversals.ll  construction-of-lcp-array-from-suffix-array.ll  count-1s-sorted-binary-array.ll  count-number-binary-strings-without-consecutive-1s.ll  cut-vertices.ll  detect-cycle-in-a-graph.ll  dfa-based-division.ll  edit-distance.ll  efficient-constructtion-of-finite-automata.ll  eulerian-path-and-circuit.ll  find-common-elements-three-sorted-arrays.ll  find-length-of-the-longest-consecutive-path-in-a-character-matrix.ll  find-parity.ll  finite-automata-algorithm.ll  floyd-warshall.ll  graph-coloring.ll  hamiltonian-cycle-backtracking.ll  kth-smallestlargest-element-unsorted-array-set-2-expected-linear-time.ll  lexicographic-rank-of-a-string.ll  little-and-big-endian-mystery.ll  longest-even-length-substring-sum-first-second-half.ll  longest-increasing-subsequence.ll  longest-palindromic-subsequence.ll  longest-path-directed-acyclic-graph.ll  maximum-profit-by-buying-and-selling-a-share-at-most-twice.ll  maximum-size-sub-matrix-with-all-1s-in-a-binary-matrix.ll  maximum-sum-rectangle-in-a-2d-matrix.ll  merge-sort-for-doubly-linked-list.ll  mergeSort_LinkedList.ll  minimum-adjacent-swaps-to-move-maximum-and-minimum-to-corners.ll  minimum-cut-in-a-directed-graph.ll  (+28 more)
src/test-suite/PE-benchmarks-llfiles-llvm14/: Find_the_closest_pair_from_two_sorted_arrays.ll  Iterative_QuickSort.ll  Nearly_sorted_Algo.ll  aho-corasick-algorithm.ll  anagram-substring-search-search-permutations.ll  bellman-ford-algorithm.ll  bfs.ll  biconnectivity.ll  binary-insertion-sort.ll  binomial-coefficient.ll  birthday-paradox.ll  boolean-parenthesization-problem.ll  boruvkas-algorithm.ll  box-stacking.ll  boyer-moore-algorithm.ll  channel-assignment.ll  coin-change.ll  collect-maximum-points-in-a-grid-using-two-traversals.ll  construction-of-lcp-array-from-suffix-array.ll  count-1s-sorted-binary-array.ll  count-number-binary-strings-without-consecutive-1s.ll  count-of-n-digit-numbers-whose-sum-of-digits-equals-to-given-sum.ll  count-possible-ways-to-construct-buildings.ll  count-ways-reach-nth-stair.ll  cut-vertices.ll  cutting-a-rod.ll  detect-cycle-in-a-graph.ll  detect-cycle-undirected-graph.ll  dfs.ll  (+89 more)
src/tests/: test_ir2vec.cpp
(+1929 files in other folders)
